--- a/homework_ana/20230918_homework_ana.ipynb
+++ b/homework_ana/20230918_homework_ana.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color: navy; font-weight: bold; font-size: 20px;\">Librerías:</span>\n"
+    "<span style=\"color: navy; font-weight: bold; font-size: 20px;\">Libraries:</span>\n"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
