--- a/homework_ana/20230925_homework_ana.ipynb
+++ b/homework_ana/20230925_homework_ana.ipynb
@@ -761,7 +761,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "error_mean has a better RMSE"
+    "error_mean has a better RMSE but they are almost equals"
    ]
   },
   {
@@ -868,7 +868,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We obtain almost the same results, so we select the smallest r. r = 0.000001"
+    "We obtain almost the same results, so we select the smallest r. r = 0"
    ]
   },
   {
